# glucose

./: .gitignore  LICENSE  Makefile  README.md  example.glc  glucose.cabal  good.ll  index.html  params.json  stack.yaml
app/: Main.hs
manual/: Makefile  conf.py  guide.rst  index.rst  man.rst  reference.rst  releases.rst  usage.rst
manual/_build/html/: .buildinfo  genindex.html  guide.html  index.html  man.html  objects.inv  reference.html  releases.html  search.html  searchindex.js  usage.html
manual/_build/html/_sources/: guide.txt  index.txt  reference.txt  usage.txt
src/Control/: Generalised.hs
src/Control/Comonad/: Utils.hs
src/Control/Lens/: Utils.hs
src/Control/Monad/: Throw.hs
src/Data/: Format.hs
src/Data/Functor/: With.hs
src/Data/Map/: List.hs  Utils.hs
src/Glucose/: AST.hs  Codegen.hs  Compiler.hs  Desugar.hs  Error.hs  Format.hs  IR.hs  Identifier.hs  Lang.hs  Lexer.hs  Namespace.hs  Parser.hs  Source.hs  Token.hs  TypeChecker.hs  Unique.hs  VarGen.hs  Version.hs
src/Glucose/CLI/: Args.hs  IO.hs
src/Glucose/Codegen/: JavaScript.hs  Javascript.hs  LLVM.hs  Target.hs
src/Glucose/Codegen/LLVM/: Closure.hs  DSL.hs  Execution.hs  LocalScope.hs  Name.hs  NameGen.hs  RT.hs  Types.hs
src/Glucose/IR/: Checked.hs  Format.hs
src/Glucose/Lexer/: Char.hs  Lexeme.hs  Location.hs  NumericLiteral.hs  Reversible.hs  SyntacticToken.hs  SyntaxError.hs
src/Glucose/Parser/: EOFOr.hs  Monad.hs  ParseError.hs  Source.hs  Tokens.hs
src/Glucose/TypeChecker/: TypeCheckError.hs  Unify.hs
src/JavaScript/: AST.hs  Name.hs
src/LLVM/: AST.hs  DSL.hs  Name.hs
src/RT/: alloc.ll  builtins.ll  rt.ll
stylesheets/: stylesheet.css
test/Glucose/: CodegenSpec.hs  CompilerSpec.hs  DesugarSpec.hs  ErrorSpec.hs  LexerSpec.hs  ParserSpec.hs  TypeCheckerSpec.hs
test/Glucose/Codegen/: ExecutionSpec.hs  JavaScriptSpec.hs  LLVMSpec.hs
test/Glucose/Codegen/LLVM/: ExecutionSpec.hs
test/Glucose/Test/: AST.hs  Error.hs  IR.hs  Identifier.hs  Lexer.hs  Source.hs  SyntacticToken.hs  Unique.hs
test/Glucose/Test/IR/: Checked.hs  Checking.hs  Core.hs  Unchecked.hs
test/Glucose/TypeChecker/: UnifySpec.hs
test/Test/: Executable.hs  Prelude.hs  Utils.hs
