name:                glucose
version:             0.0.3
synopsis:            A strongly-typed functional programming language.
description:         Please see README.md
homepage:            https://github.com/sardonicpresence/glucose#readme
license:             MIT
license-file:        LICENSE
author:              Neil Vice
maintainer:          sardonicpresence@gmail.com
copyright:           (c) 2016 Neil Vice
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , text
                     , mtl
                     , containers
                     , megaparsec
                     , lens
  exposed-modules:     Glucose.Compiler
                     , Glucose.Lexer
                     , Glucose.Lexer.Location
                     , Glucose.Parser
                     , Glucose.Error
                     , Glucose.Identifier
                     , Glucose.AST
                     , Glucose.IR
                     , Glucose.Token
                     , Glucose.Namespace
                     , Glucose.TypeChecker
                     , Glucose.Codegen
                     , Glucose.Lexer.Char
                     , Glucose.Lexer.Lexeme
                     , Glucose.Lexer.NumericLiteral
                     , Glucose.Parser.Tokens
                     , LLVM.AST
  default-extensions:  OverloadedStrings
                     , BangPatterns
                     , MultiParamTypeClasses
                     , TupleSections
                     , FlexibleContexts
                     , FlexibleInstances
                     , NamedFieldPuns
                     , LambdaCase
                     , ViewPatterns
                     , DefaultSignatures
  default-language:    Haskell2010

executable glucose
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , glucose
                     , text
                     , cmdargs
                     , filepath
  default-extensions:  NamedFieldPuns
                     , DeriveDataTypeable
  default-language:    Haskell2010

test-suite glucose-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Glucose.CompilerSpec
                     , Glucose.CodegenSpec
                     , Glucose.TypeCheckerSpec
                     , Glucose.ParserSpec
                     , Glucose.LexerSpec
                     , Test.Utils
                     , Test.Prelude
  build-depends:       base
                     , glucose
                     , text
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sardonicpresence/glucose
