name:                glucose
version:             0.0.6
synopsis:            A strongly-typed functional programming language.
description:         Please see README.md
homepage:            https://github.com/sardonicpresence/glucose#readme
license:             MIT
license-file:        LICENSE
author:              Neil Vice
maintainer:          sardonicpresence@gmail.com
copyright:           (c) 2017 Neil Vice
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , text
                     , mtl
                     , containers
                     , lens
                     , comonad
                     , cmdargs
                     , filepath
                     , QuickCheck
  exposed-modules:     Glucose.CLI.Args
                     , Glucose.CLI.IO
                     , Glucose.Compiler
                     , Glucose.Lexer
                     , Glucose.Lexer.Char
                     , Glucose.Lexer.Location
                     , Glucose.Lexer.NumericLiteral
                     , Glucose.Lexer.Reversible
                     , Glucose.Parser
                     , Glucose.Parser.EOFOr
                     , Glucose.Parser.Monad
                     , Glucose.Parser.Source
                     , Glucose.AST
                     , Glucose.Desugar
                     , Glucose.Codegen
                     , Glucose.Codegen.JavaScript
                     , Glucose.Codegen.LLVM
                     , Glucose.Codegen.LLVM.NameGen
                     , Glucose.Codegen.LLVM.RT
                     , Glucose.Codegen.LLVM.Types
                     , Glucose.Error
                     , Glucose.Identifier
                     , Glucose.IR
                     , Glucose.IR.Checked
                     , Glucose.Namespace
                     , Glucose.Token
                     , Glucose.TypeChecker
                     , Glucose.VarGen
                     , Glucose.Version
                     , LLVM.AST
                     , LLVM.DSL
                     , LLVM.Name
                     , Data.Map.Utils
                     , Control.Monad.Throw
  default-extensions:  OverloadedStrings
                     , BangPatterns
                     , MultiParamTypeClasses
                     , TupleSections
                     , FlexibleContexts
                     , FlexibleInstances
                     , NamedFieldPuns
                     , LambdaCase
                     , ViewPatterns
                     , DefaultSignatures
                     , DeriveFunctor
                     , DeriveDataTypeable
                     , RankNTypes
                     , ConstraintKinds
                     , GeneralizedNewtypeDeriving
                     , UndecidableInstances
                     , StandaloneDeriving
  default-language:    Haskell2010

executable glucose
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , glucose
                     , text
                     , cmdargs
                     , filepath
                     , mtl
  default-extensions:  NamedFieldPuns
                     , DeriveDataTypeable
  default-language:    Haskell2010

test-suite glucose-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Glucose.CompilerSpec
                     , Glucose.LexerSpec
                     , Glucose.ParserSpec
                     , Glucose.DesugarSpec
                     , Glucose.TypeCheckerSpec
                     , Glucose.Codegen.JavaScriptSpec
                     , Glucose.Codegen.LLVMSpec
                     , Glucose.Test.AST
                     , Glucose.Test.Error
                     , Glucose.Test.IR.Core
                     , Glucose.Test.IR.Checked
                     , Glucose.Test.IR.Unchecked
                     , Glucose.Test.Lexer
                     , Glucose.Test.Source
                     , Test.Utils
                     , Test.Prelude
  build-depends:       base
                     , glucose
                     , text
                     , comonad
                     , containers
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sardonicpresence/glucose
