name:                glucose
version:             0.0.6
synopsis:            A strongly-typed functional programming language.
description:         Please see README.md
homepage:            https://github.com/sardonicpresence/glucose#readme
license:             MIT
license-file:        LICENSE
author:              Neil Vice
maintainer:          sardonicpresence@gmail.com
copyright:           (c) 2017 Neil Vice
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , text
                     , mtl
                     , containers
                     , lens
                     , comonad
                     , cmdargs
                     , filepath
                     , QuickCheck
  exposed-modules:     Glucose.CLI.Args
                     , Glucose.CLI.IO
                     , Glucose.Compiler
                     , Glucose.Lexer
                     , Glucose.Lexer.Char
                     , Glucose.Lexer.NumericLiteral
                     , Glucose.Lexer.Reversible
                     , Glucose.Lexer.SyntaxError
                     , Glucose.Parser
                     , Glucose.Parser.EOFOr
                     , Glucose.Parser.Monad
                     , Glucose.Parser.ParseError
                     , Glucose.AST
                     , Glucose.Desugar
                     , Glucose.Codegen
                     , Glucose.Codegen.JavaScript
                     , Glucose.Codegen.LLVM
                     , Glucose.Codegen.LLVM.DSL
                     , Glucose.Codegen.LLVM.Name
                     , Glucose.Codegen.LLVM.NameGen
                     , Glucose.Codegen.LLVM.Types
                     , Glucose.Codegen.Target
                     , Glucose.Error
                     , Glucose.Format
                     , Glucose.Identifier
                     , Glucose.IR
                     , Glucose.IR.Checked
                     , Glucose.IR.Format
                     , Glucose.Namespace
                     , Glucose.Source
                     , Glucose.Token
                     , Glucose.TypeChecker
                     , Glucose.TypeChecker.TypeCheckError
                     , Glucose.TypeChecker.Unify
                     , Glucose.VarGen
                     , Glucose.Version
                     , JavaScript.AST
                     , JavaScript.Name
                     , LLVM.AST
                     , LLVM.DSL
                     , LLVM.Name
                     , Control.Comonad.Utils
                     , Control.Lens.Utils
                     , Control.Generalised
                     , Data.Map.Utils
                     , Data.Format
  default-extensions:  OverloadedStrings
                     , BangPatterns
                     , MultiParamTypeClasses
                     , TupleSections
                     , FlexibleContexts
                     , FlexibleInstances
                     , NamedFieldPuns
                     , LambdaCase
                     , ViewPatterns
                     , DefaultSignatures
                     , DeriveFunctor
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveTraversable
                     , RankNTypes
                     , ConstraintKinds
                     , GeneralizedNewtypeDeriving
                     , UndecidableInstances
                     , StandaloneDeriving
                     , ExistentialQuantification
                     , ApplicativeDo
  default-language:    Haskell2010

executable glucose
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , glucose
                     , text
                     , cmdargs
                     , filepath
                     , mtl
  default-extensions:  NamedFieldPuns
                     , DeriveDataTypeable
  default-language:    Haskell2010

test-suite glucose-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Glucose.CompilerSpec
                     , Glucose.LexerSpec
                     , Glucose.ParserSpec
                     , Glucose.DesugarSpec
                     , Glucose.TypeCheckerSpec
                     , Glucose.TypeChecker.UnifySpec
                     , Glucose.Codegen.JavaScriptSpec
                     , Glucose.Codegen.LLVMSpec
                     , Glucose.Codegen.LLVM.ExecutionSpec
                     , Glucose.Test.AST
                     , Glucose.Test.Identifier
                     , Glucose.Test.IR
                     , Glucose.Test.IR.Core
                     , Glucose.Test.IR.Checked
                     , Glucose.Test.IR.Checking
                     , Glucose.Test.IR.Unchecked
                     , Glucose.Test.Lexer
                     , Glucose.Test.Source
                     , Test.Prelude
                     , Test.Utils
                     , Test.Executable
  build-depends:       base
                     , glucose
                     , text
                     , comonad
                     , containers
                     , lens
                     , hspec
                     , QuickCheck
                     , process
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  OverloadedStrings
                     , FlexibleInstances
                     , FlexibleContexts
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sardonicpresence/glucose
